Falta deixar bonito

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    
+    <h2>JOGO DA COBRINHA</h2>
     <canvas id="snake" width="512" height="512"></canvas>
-
-    
 </body>
 </html>
